--- a/src/app/home/calls/calls.page.html
+++ b/src/app/home/calls/calls.page.html
@@ -1,9 +1,53 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>calls</ion-title>
-  </ion-toolbar>
+	<ion-toolbar>
+		<ion-title style="font-size: 30px;">Calls</ion-title>
+	</ion-toolbar>
+	<ion-searchbar
+		placeholder="Search..."
+		(ionChange)="onSearchChange($event)"
+		[debounce]="250"
+	></ion-searchbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-on-padding">
+	<ion-grid fixed>
+		<ion-row>
+			<ion-col size="12">
+				<ion-list>
+					<ion-item-sliding *ngFor="let call of loadedCallLog" #slideEl>
+						<ion-item>
+							<ion-avatar style="background-color: lightgray;">
+								<ion-img [src]="call.imageUrl"></ion-img>
+							</ion-avatar>
+							<ion-label>
+								<h4>{{ call.user}}</h4>
+								<p>
+									<span style="margin-right: 20px;">{{ call.type }}</span> {{
+									call.time}}
+								</p>
+							</ion-label>
+							<ion-icon
+								slot="end"
+								name="videocam"
+								(click)="forVideoCall()"
+								style="color: lightgray;"
+							></ion-icon>
+							<ion-icon
+								slot="end"
+								name="call"
+								(click)="forVoiceCall()"
+								style="color: lightgray;"
+							></ion-icon>
+						</ion-item>
 
+						<ion-item-options side="end">
+							<ion-item-option (click)="onDelete(slideEl)" color="danger"
+								>Delete</ion-item-option
+							>
+						</ion-item-options>
+					</ion-item-sliding>
+				</ion-list>
+			</ion-col>
+		</ion-row>
+	</ion-grid>
 </ion-content>
