Implemented single status detail and fixed full width call grid

--- a/src/app/home/chats/chat-detail/chat-detail.page.html
+++ b/src/app/home/chats/chat-detail/chat-detail.page.html
@@ -1,9 +1,10 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>chat-detail</ion-title>
-  </ion-toolbar>
+	<ion-toolbar>
+		<ion-buttons slot="start">
+			<ion-back-button defaultHref="/home/tabs/chats"></ion-back-button>
+		</ion-buttons>
+		<ion-title>chat-detail</ion-title>
+	</ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
