--- a/src/app/home/calls/calls.page.html
+++ b/src/app/home/calls/calls.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content class="ion-on-padding">
-	<ion-grid fixed>
+	<ion-grid>
 		<ion-row>
 			<ion-col size="12">
 				<ion-list>
