--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-tabs>
 	<ion-tab-bar slot="bottom">
 		<ion-tab-button tab="status">
-			<ion-icon name="expand"></ion-icon>
+			<ion-icon name="image"></ion-icon>
 			<ion-label>Status</ion-label>
 		</ion-tab-button>
 
