implemented modals foe settings and status

--- a/src/app/home/calls/calls.page.html
+++ b/src/app/home/calls/calls.page.html
@@ -30,6 +30,7 @@
 			placeholder="Search..."
 			(ionChange)="onSearchChange($event)"
 			[debounce]="250"
+			mode="ios"
 		></ion-searchbar>
 	</ion-toolbar>
 </ion-header>
