--- a/src/app/home/settings/settings-utilities/data/data.component.html
+++ b/src/app/home/settings/settings-utilities/data/data.component.html
@@ -1,3 +1,8 @@
-<p>
-  data works!
-</p>
+<ion-header>
+	<ion-toolbar>
+		<ion-button (click)="onClick()" fill="clear">
+			<ion-icon slot="start" name="arrow-round-back" color="primary"></ion-icon>
+		</ion-button>
+		<ion-title>Data and Storage Usage</ion-title>
+	</ion-toolbar>
+</ion-header>
