--- a/src/app/home/status/status-list/status-list.component.html
+++ b/src/app/home/status/status-list/status-list.component.html
@@ -1,4 +1,4 @@
-<!-- <ion-header>
+<ion-header>
 	<ion-toolbar>
 		<ion-buttons slot="start" defaultHref="/home/tabs/status">
 			<ion-back-button></ion-back-button>
@@ -16,6 +16,6 @@
 			<ion-label>Awesome Label</ion-label>
 		</ion-item>
 	</ion-list>
-</ion-content> -->
+</ion-content>
 
-<h1>Self Status</h1>
+<!-- <h1>Self Status</h1> -->
