--- a/src/app/home/settings/settings-utilities/starred/starred.component.html
+++ b/src/app/home/settings/settings-utilities/starred/starred.component.html
@@ -1,3 +1,15 @@
-<p>
-  starred works!
-</p>
+<ion-header>
+	<ion-toolbar>
+		<ion-button (click)="onClick()" fill="clear">
+			<ion-icon slot="start" name="arrow-round-back" color="primary"></ion-icon>
+		</ion-button>
+		<ion-title>Starred Messages</ion-title>
+	</ion-toolbar>
+</ion-header>
+<ion-content>
+	<ion-grid class="ion-no-padding">
+		<ion-row>
+			<ion-col size="9" offset-md="3"></ion-col>
+		</ion-row>
+	</ion-grid>
+</ion-content>
