Minor bug fixes, added app images

--- a/src/app/home/calls/calls.page.html
+++ b/src/app/home/calls/calls.page.html
@@ -42,7 +42,7 @@
 				<ion-list>
 					<ion-item-sliding *ngFor="let call of loadedCallLog" #slideEl>
 						<ion-item>
-							<ion-avatar style="background-color: lightgray;">
+							<ion-avatar>
 								<ion-img [src]="call.imageUrl"></ion-img>
 							</ion-avatar>
 							<ion-label>
