--- a/src/app/home/chats/chats.page.html
+++ b/src/app/home/chats/chats.page.html
@@ -39,7 +39,7 @@
 							[routerLink]="['/', 'home', 'tabs', 'chats', item.id]"
 							detail
 						>
-							<ion-avatar style="background-color: lightgray;">
+							<ion-avatar>
 								<ion-img [src]="item.imageUrl"></ion-img>
 							</ion-avatar>
 							<ion-label>
