--- a/src/app/home/settings/settings.page.html
+++ b/src/app/home/settings/settings.page.html
@@ -7,7 +7,7 @@
 
 <ion-content>
 	<ion-item detail style="margin: 20px 0;" (click)="userDetails()">
-		<ion-avatar style="background-color: lightgray;">
+		<ion-avatar>
 			<ion-img [src]="user.imageUrl"></ion-img>
 		</ion-avatar>
 		<ion-label style="padding-left: 10px; letter-spacing: 1.3;">
