--- a/src/app/home/settings/settings-utilities/help/help.component.html
+++ b/src/app/home/settings/settings-utilities/help/help.component.html
@@ -1,8 +1,41 @@
 <ion-header>
 	<ion-toolbar>
-		<ion-button (click)="onClick()" fill="clear">
-			<ion-icon slot="start" name="arrow-round-back" color="primary"></ion-icon>
-		</ion-button>
-		<ion-title>Help</ion-title>
+		<div
+			(click)="onClick()"
+			style="display: flex; align-items: center;"
+			color="primary"
+		>
+			<ion-icon name="arrow-back" color="primary"></ion-icon>
+			<p style="color: #3880ff;">Settings</p>
+		</div>
+		<ion-title mode="ios">WhatsApp</ion-title>
 	</ion-toolbar>
 </ion-header>
+
+<ion-content>
+	<ion-grid fixed>
+		<ion-row>
+			<ion-col size="8" offset-md="2">
+				<img src="../../../../../assets/images/bubble1.png" alt="grid" />
+			</ion-col>
+		</ion-row>
+		<ion-row>
+			<ion-col size="12">
+				<ion-list>
+					<ion-item>
+						<ion-label><p>FAQ</p> </ion-label>
+					</ion-item>
+					<ion-item>
+						<ion-label><p>Contact Us</p> </ion-label>
+					</ion-item>
+					<ion-item>
+						<ion-label><p>Terms and Privacy Policy</p> </ion-label>
+					</ion-item>
+					<ion-item>
+						<ion-label><p>Licenses</p> </ion-label>
+					</ion-item>
+				</ion-list>
+			</ion-col>
+		</ion-row>
+	</ion-grid>
+</ion-content>
