--- a/src/app/home/settings/settings-utilities/notifications/notifications.component.html
+++ b/src/app/home/settings/settings-utilities/notifications/notifications.component.html
@@ -1,8 +1,77 @@
 <ion-header>
 	<ion-toolbar>
-		<ion-button (click)="onClick()" fill="clear">
-			<ion-icon slot="start" name="arrow-round-back" color="primary"></ion-icon>
-		</ion-button>
-		<ion-title>Notifications</ion-title>
+		<div
+			(click)="onClick()"
+			style="display: flex; align-items: center;"
+			color="primary"
+		>
+			<ion-icon name="arrow-back" color="primary"></ion-icon>
+			<p style="color: #3880ff;">Settings</p>
+		</div>
+		<ion-title mode="ios">Notifications</ion-title>
 	</ion-toolbar>
 </ion-header>
+
+<ion-content>
+	<ion-grid>
+		<ion-row>
+			<ion-col size="12">
+				<small style="color: lightgrey;">MESSAGE NOTIFICATIONS</small>
+				<ion-list>
+					<ion-item detail>
+						<ion-label><p>Show Notifications</p> </ion-label>
+					</ion-item>
+					<ion-item detail>
+						<ion-label><p>Sound</p> </ion-label>
+					</ion-item>
+				</ion-list>
+			</ion-col>
+		</ion-row>
+		<ion-row>
+			<ion-col size="12">
+				<small style="color: lightgrey;">GROUP NOTIFICATIONS</small>
+				<ion-list>
+					<ion-item detail>
+						<ion-label><p>Show Notifications</p> </ion-label>
+					</ion-item>
+					<ion-item detail>
+						<ion-label><p>Sound</p> </ion-label>
+					</ion-item>
+				</ion-list>
+			</ion-col>
+		</ion-row>
+		<ion-row>
+			<ion-col size="12">
+				<ion-item detail>
+					<ion-label>
+						<h4>In-App Notifications</h4>
+						<small>Banners, Sounds, Vibrate</small>
+					</ion-label>
+				</ion-item>
+			</ion-col>
+		</ion-row>
+		<ion-row>
+			<ion-col size="12">
+				<ion-item>
+					<ion-label>
+						<p>
+							Show preview
+						</p>
+					</ion-label>
+				</ion-item>
+				<small class="ion-padding" class="ion-margin"
+					>Preview text inside new message notification</small
+				>
+			</ion-col>
+		</ion-row>
+		<ion-row>
+			<ion-col size="12">
+				<ion-item (click)="onReset()">
+					<ion-label color="danger"
+						><p>Reset Notifications Settings</p>
+					</ion-label>
+				</ion-item>
+			</ion-col>
+		</ion-row>
+	</ion-grid>
+</ion-content>
