--- a/src/app/home/settings/settings-utilities/starred/starred.component.html
+++ b/src/app/home/settings/settings-utilities/starred/starred.component.html
@@ -1,9 +1,14 @@
 <ion-header>
 	<ion-toolbar>
-		<ion-button (click)="onClick()" fill="clear">
-			<ion-icon slot="start" name="arrow-round-back" color="primary"></ion-icon>
-		</ion-button>
-		<ion-title>Starred Messages</ion-title>
+		<div
+			(click)="onClick()"
+			style="display: flex; align-items: center;"
+			color="primary"
+		>
+			<ion-icon name="arrow-back" color="primary"></ion-icon>
+			<p style="color: #3880ff;">Settings</p>
+		</div>
+		<ion-title mode="ios">Starred Messages</ion-title>
 	</ion-toolbar>
 </ion-header>
 <ion-content>
