--- a/src/app/home/settings/settings.page.scss
+++ b/src/app/home/settings/settings.page.scss
@@ -15,3 +15,10 @@ ion-icon {
 	font-size: 18px;
 	margin-right: 5px;
 }
+ion-content {
+	background-color: lightgrey;
+}
+
+ion-row {
+	background: #fff;
+}
