--- a/src/app/home/status/status.page.html
+++ b/src/app/home/status/status.page.html
@@ -17,7 +17,7 @@
 			<ion-col size="12">
 				<ion-list>
 					<ion-item>
-						<ion-avatar style="background-color: lightgray;">
+						<ion-avatar>
 							<ion-img [src]="loadedStatuses[0].imageUrl"></ion-img>
 							<ion-badge color="primary" slot="start">+</ion-badge>
 						</ion-avatar>
@@ -45,6 +45,7 @@
 		<ion-row>
 			<ion-col size="12">
 				<ion-list detail>
+					<small>RECENT UPDATES</small>
 					<ion-item-sliding
 						*ngFor="let person of loadedStatuses.slice(1)"
 						#slidingControl
@@ -53,7 +54,7 @@
 							(click)="onClick(person.id)"
 							routerLinkActive="router-link-active"
 						>
-							<ion-avatar style="background-color: lightgray;">
+							<ion-avatar>
 								<ion-img [src]="person.imageUrl"></ion-img>
 							</ion-avatar>
 							<ion-label>
